--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <!-- صحنه‌ی سه‌بعدی -->
     <a-scene>
       <!-- یک جعبه -->
-      <a-box position="0 1 -3" color="tomato"></a-box>
+      <a-box position="0 5 -3" color="green"></a-box>
 
       <!-- آسمان -->
-      <a-sky color="#ECECEC"></a-sky>
+      <a-sky color="skyblue"></a-sky>
     </a-scene>
   </body>
 </html>
