--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- صحنه‌ی سه‌بعدی -->
     <a-scene>
       <!-- یک جعبه -->
-      <a-box position="0 0 0" color="green"></a-box>
+      <a-box position="0 2 0" color="red"></a-box>
 
       <!-- آسمان -->
       <a-sky color="skyblue"></a-sky>
