--- a/index.html
+++ b/index.html
@@ -2,28 +2,32 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>اولین پروژه A-Frame من</title>
-    <!-- بارگذاری کتابخانه A-Frame -->
+    <title> بافت و مدل سه‌بعدی</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
   </head>
   <body>
-    <!-- صحنه‌ی سه‌بعدی -->
-      <a-scene>
-        <!-- کره نارنجی -->
-        <a-sphere position="-1 1.25 -3" radius="1.25" color="orange"></a-sphere>
+    <a-scene>
+      <!-- منابع -->
+      <a-assets>
+        <img id="wood" src="wood.jpg">
+      </a-assets>
 
-        <!-- جعبه آبی -->
-        <a-box position="1 0.5 -3" rotation="0 45 0" color="dodgerblue"></a-box>
+      <!-- نور -->
+      <a-light type="ambient" color="#888"></a-light>
+      <a-light type="point" intensity="1.5" position="2 4 4"></a-light>
 
-        <!-- استوانه سبز -->
-        <a-cylinder position="0 0.75 -2" radius="0.5" height="1.5" color="seagreen"></a-cylinder>
+      <!-- دوربین -->
+      <a-entity camera look-controls position="0 1.6 0"></a-entity>
 
-        <!-- زمین -->
-        <a-plane position="0 0 -4" rotation="-90 0 0" width="8" height="8" color="#ccc"></a-plane>
+      <!-- جعبه با بافت چوب -->
+      <a-box position="0 1 -3" rotation="0 45 0" width="1.5" height="1.5" depth="1.5"
+             src="#wood" shadow></a-box>
 
-        <!-- آسمان -->
-        <a-sky color="#ECECEC"></a-sky>
-      </a-scene>
+      <!-- زمین -->
+      <a-plane position="0 0 -4" rotation="-90 0 0" width="8" height="8" color="#ccc"></a-plane>
 
+      <!-- آسمان -->
+      <a-sky color="#ECECEC"></a-sky>
+    </a-scene>
   </body>
 </html>
