--- a/index.html
+++ b/index.html
@@ -18,12 +18,20 @@
       <a-light type="ambient" color="#888"></a-light>
       <a-light type="point" intensity="1.5" position="2 4 4"></a-light>
 
-      <!-- دوربین -->
-      <a-entity camera look-controls position="0 1.6 0"></a-entity>
+      <!-- دوربین و کرسر -->
+      <a-entity camera position="0 1.6 0" look-controls>
+        <a-cursor color="black"></a-cursor>
+      </a-entity>
 
       <!-- جعبه با بافت چوب -->
       <a-box position="0 1 -3" rotation="0 45 0" width="1.5" height="1.5" depth="1.5" src="#wood" shadow></a-box>
       
+       <!-- مکعب قابل کلیک -->
+      <a-box id="myBox" position="0 1.5 -3" color="#4CC3D9" 
+             event-set__click="color: #EF2D5E"
+             animation__mouseenter="property: scale; to: 1.2 1.2 1.2; startEvents: mouseenter; dur: 200"
+             animation__mouseleave="property: scale; to: 1 1 1; startEvents: mouseleave; dur: 200">
+      </a-box>
       <!-- مدل سه بعدی -->
       <a-entity gltf-model="#Garage" position="2 0 -3" scale="0.5 0.5 0.5"></a-entity>
 
