--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
       <!-- آسمان -->
       <a-sky color="#ECECEC"></a-sky>
     </a-scene>
+    <script src="app.js"></script>
   </body>
 </html>
