--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
              event-set__click="color: #EF2D5E"
              animation__mouseenter="property: scale; to: 1.2 1.2 1.2; startEvents: mouseenter; dur: 200"
              animation__mouseleave="property: scale; to: 1 1 1; startEvents: mouseleave; dur: 200">
+             animation__click="property: position; to: 0 2 -3; startEvents: click; dur: 500">
       </a-box>
       <!-- مدل سه بعدی -->
       <a-entity gltf-model="#Garage" position="2 0 -3" scale="0.5 0.5 0.5"></a-entity>
