--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <a-box id="myBox" position="0 1.5 -3" color="#4CC3D9" 
              event-set__click="color: #EF2D5E"
              animation__mouseenter="property: scale; to: 1.2 1.2 1.2; startEvents: mouseenter; dur: 200"
-             animation__mouseleave="property: scale; to: 1 1 1; startEvents: mouseleave; dur: 200">
+             animation__mouseleave="property: scale; to: 1 1 1; startEvents: mouseleave; dur: 200"
              animation__click="property: position; to: 0 2 -3; startEvents: click; dur: 500">
       </a-box>
       <!-- مدل سه بعدی -->
