--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <a-asset-item id="Garage" src="Garage.glb"></a-asset-item>
       </a-assets>
 
+      <a-sky src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/sechelt.jpg"></a-sky>
+
+
       <!-- نور -->
       <a-light type="ambient" color="#888"></a-light>
       <a-light type="point" intensity="1.5" position="2 4 4"></a-light>
