--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a-asset-item id="Garage" src="Garage.glb"></a-asset-item>
       </a-assets>
 
-      <a-sky src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/sechelt.jpg"></a-sky>
+    
 
 
       <!-- نور -->
@@ -47,7 +47,8 @@
       <a-plane src="#grass" position="0 0 -4" rotation="-90 0 0" width="8" height="8" color="#ccc"></a-plane>
 
       <!-- آسمان -->
-      <a-sky color="#ECECEC"></a-sky>
+      <a-sky src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/sechelt.jpg"></a-sky>
+      <!-- <a-sky color="#ECECEC"></a-sky> -->
     </a-scene>
     <script src="app.js"></script>
   </body>
