--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
 
 
       <!-- نور -->
-      <a-light type="ambient" color="#888"></a-light>
-      <a-light type="point" intensity="1.5" position="2 4 4"></a-light>
+      <!-- <a-light type="ambient" color="#888"></a-light> -->
+      <!-- <a-light type="point" intensity="1.5" position="2 4 4"></a-light> -->
+      <a-entity light="type: ambient; intensity: 0.5; color: #ffffff"></a-entity>
+      <a-entity light="type: directional; intensity: 1; color: #ffffff" position="2 4 -3"></a-entity>
+      <a-entity light="type: directional; castShadow: true; intensity: 1" position="2 4 -3"></a-entity>
+      <a-plane shadow="receive: true"></a-plane>
+      <a-box shadow="cast: true"></a-box>
 
       <!-- دوربین و کرسر -->
       <a-entity camera position="0 1.6 0" look-controls>
@@ -44,12 +49,21 @@
 <a-box click-change position="-1.5 1.5 -3" color="#FF8800"></a-box>
 
       <!-- زمین -->
-      <a-plane src="#grass" position="0 0 -4" rotation="-90 0 0" width="8" height="8" color="#ccc"></a-plane>
+      <a-plane src="https://cdn.aframe.io/a-painter/images/floor.jpg" 
+         rotation="-90 0 0" 
+         height="100" 
+         width="100" 
+         repeat="50 50">
+      </a-plane>
+      <!-- <a-plane src="#grass" position="0 0 -4" rotation="-90 0 0" width="8" height="8" color="#ccc"></a-plane> -->
 
       <!-- آسمان -->
       <a-sky src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/sechelt.jpg"></a-sky>
       <!-- <a-sky color="#ECECEC"></a-sky> -->
-    </a-scene>
+
+       <!-- مه -->
+      <a-scene fog="type: linear; color: #AAA; near: 1; far: 15"> </a-scene>
+      
     <script src="app.js"></script>
   </body>
 </html>
